kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: forex-crm
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backend
                  image: forex-crm_backend:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 4000
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "200m"
                      limits:
                          memory: "512Mi"
                          cpu: "400m"
