kubernetes/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: booking-service
    namespace: forex-crm
    labels:
        app: booking-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: booking-service
    template:
        metadata:
            labels:
                app: booking-service
        spec:
            containers:
                - name: booking-service
                  image: forex-crm_booking-service:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 5000
