kubernetes/forex-admin-deployment.yaml
# forex-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: forex-admin
    namespace: forex-crm
spec:
    replicas: 1
    selector:
        matchLabels:
            app: forex-admin
    template:
        metadata:
            labels:
                app: forex-admin
        spec:
            containers:
                - name: forex-admin
                  image: forex-crm_forex-admin:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "200m"
                      limits:
                          memory: "512Mi"
                          cpu: "400m"
