kubernetes/frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: forex-crm
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: forex-crm_frontend:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3001
                  resources:
                      requests:
                          memory: "512Mi"
                          cpu: "400m"
                      limits:
                          memory: "1Gi"
                          cpu: "400m"
