kubernetes/mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mssql
    namespace: forex-crm
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mssql
    template:
        metadata:
            labels:
                app: mssql
        spec:
            containers:
                - name: mssql
                  image: mcr.microsoft.com/mssql/server:2022-latest
                  ports:
                      - containerPort: 1433
                  command: ["/bin/sh", "/db/entrypoint.sh"]
                  volumeMounts:
                      - name: sql-data
                        mountPath: /var/opt/mssql
                      - name: init-script-volume
                        mountPath: /db
                        readOnly: true

            volumes:
                - name: sql-data
                  persistentVolumeClaim:
                      claimName: sql-data-pvc
                - name: init-script-volume
                  configMap:
                      name: mssql-init-scripts
                      defaultMode: 0755
