kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: static-html
    namespace: forex-crm
spec:
    replicas: 1
    selector:
        matchLabels:
            app: static-html
    template:
        metadata:
            labels:
                app: static-html
        spec:
            containers:
                - name: nginx
                  image: nginx:latest
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: html
                        mountPath: /usr/share/nginx/html/index.html
                        subPath: index.html
            volumes:
                - name: html
                  configMap:
                      name: static-html
