kubernetes/nginx-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-proxy
    namespace: forex-crm
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx-proxy
    template:
        metadata:
            labels:
                app: nginx-proxy
        spec:
            containers:
                - name: nginx
                  image: nginx:latest
                  ports:
                      - containerPort: 80 
                  volumeMounts:
                      - name: tls-certs
                        mountPath: /etc/nginx/certs
                        readOnly: true
                      - name: nginx-config
                        mountPath: /etc/nginx/conf.d
                        readOnly: true
                  command:
                      - nginx
                      - "-g"
                      - "daemon off;"
            volumes:
                - name: tls-certs
                  secret:
                      secretName: forex-crm-tls
                - name: nginx-config
                  configMap:
                      name: nginx-proxy-config
