kubernetes/booking-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: booking-service
    namespace: forex-crm
    labels:
        app: booking-service
spec:
    selector:
        app: booking-service
    ports:
        - protocol: TCP
          port: 5003
          targetPort: 5000
    type: ClusterIP
