kubernetes/loyalty-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: loyalty-service
    namespace: forex-crm
spec:
    selector:
        app: loyalty-service
    ports:
        - protocol: TCP
          port: 8001
          targetPort: 8001
    type: ClusterIP
