kubernetes/mssql-service.yaml
# mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mssql
    namespace: forex-crm
spec:
    ports:
        - port: 1433
          targetPort: 1433
    selector:
        app: mssql
