kubernetes/nginx-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-proxy
    namespace: forex-crm
spec:
    selector:
        app: nginx-proxy
    ports:
        - port: 80
          targetPort: 80
