kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: static-html
    namespace: forex-crm
spec:
    selector:
        app: static-html
    ports:
        - port: 80
          targetPort: 80
