kubernetes/postgres-service.yaml
# postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: forex-crm
spec:
    selector:
        app: postgres
    ports:
        - port: 5432
          targetPort: 5432
          nodePort: 32002
    type: NodePort
