kubernetes/postgres1-service.yaml
# postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres1
    namespace: forex-crm
spec:
    selector:
        app: postgres1
    ports:
        - port: 5432
          targetPort: 5432
          nodePort: 32002
    type: NodePort
