kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: web
    namespace: forex-crm
spec:
    selector:
        app: web
    ports:
        - port: 8000
          targetPort: 8000
    type: ClusterIP
