kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend-ingress
    namespace: forex-crm
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - api.forex-crm.local
          secretName: forex-crm-tls
    rules:
        - host: api.forex-crm.local
          http:
              paths:
                  - path: /api/backend
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                number: 4000

                  - path: /api/wallet
                    pathType: Prefix
                    backend:
                        service:
                            name: loyalty-service
                            port:
                                number: 8001

                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: static-html
                            port:
                                number: 80
